[gd_scene load_steps=14 format=3 uid="uid://buehqtg6ecocd"]

[ext_resource type="Script" uid="uid://cyh0d64pfygbl" path="res://addons/maaacks_game_template/base/scripts/pause_menu_controller.gd" id="1_onvsj"]
[ext_resource type="PackedScene" uid="uid://b51ffq7jnmic5" path="res://scenes/overlaid_menus/pause_menu.tscn" id="2_onvsj"]
[ext_resource type="Script" uid="uid://crbo2e4ndbyvk" path="res://addons/maaacks_game_template/extras/scripts/level_list_loader.gd" id="3_bmy5n"]
[ext_resource type="AudioStream" uid="uid://d3k8mryymy6pa" path="res://assets/music/1_game process/3_level/1.mp3" id="4_3re04"]
[ext_resource type="PackedScene" uid="uid://bkcsjsk2ciff" path="res://addons/maaacks_game_template/base/scenes/music_players/background_music_player.tscn" id="4_7aihr"]
[ext_resource type="PackedScene" uid="uid://dn02kotqcawyw" path="res://scenes/loading_screen/level_loading_screen.tscn" id="5_8qp3c"]
[ext_resource type="Script" uid="uid://cl3opf2oe8og3" path="res://scenes/game_scene/configurable_sub_viewport.gd" id="6_bmy5n"]
[ext_resource type="Script" uid="uid://ultbh4wcm8t5" path="res://scripts/level_list_and_state_manager.gd" id="7_7aihr"]
[ext_resource type="PackedScene" uid="uid://bifqmlemht8b2" path="res://scenes/overlaid_menus/game_won_menu.tscn" id="8_3re04"]
[ext_resource type="PackedScene" uid="uid://cvr36eb0r2bje" path="res://scenes/overlaid_menus/level_lost_menu.tscn" id="9_ascoc"]
[ext_resource type="PackedScene" uid="uid://fi7nwkte06g2" path="res://scenes/overlaid_menus/level_won_menu.tscn" id="10_wr4n6"]
[ext_resource type="Script" uid="uid://dsxivxi7efgqt" path="res://Levels/MainLevel/LevelUpReward.gd" id="11_bmy5n"]
[ext_resource type="PackedScene" uid="uid://7rh03lgdfidy" path="res://Objects/UpgradeCard/UpgradeCard.tscn" id="12_7aihr"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenuController" type="Node" parent="." node_paths=PackedStringArray("focused_viewport")]
script = ExtResource("1_onvsj")
pause_menu_packed = ExtResource("2_onvsj")
focused_viewport = NodePath("../ViewportContainer/ConfigurableSubViewport")

[node name="BackgroundMusicPlayer" parent="." groups=["BackgroundMusicPlayer"] instance=ExtResource("4_7aihr")]
stream = ExtResource("4_3re04")

[node name="LevelListLoader" type="Node" parent="." node_paths=PackedStringArray("level_container")]
script = ExtResource("3_bmy5n")
level_container = NodePath("../ViewportContainer/ConfigurableSubViewport")
files = Array[String](["res://Levels/MainLevel/MainLevel.tscn"])
directory = "res://Levels/MainLevel"

[node name="LevelListManager" type="Node" parent="." node_paths=PackedStringArray("level_list_loader", "level_loading_screen")]
script = ExtResource("7_7aihr")
level_list_loader = NodePath("../LevelListLoader")
main_menu_scene = "uid://c78vtc8cg3qo8"
ending_scene = "uid://dbgsehmsj18io"
HEND = "uid://dbgsehmsj18io"
BEND = "uid://bmhl314l77byj"
level_loading_screen = NodePath("../LevelLoadingScreen")
game_won_scene = ExtResource("8_3re04")
level_lost_scene = ExtResource("9_ascoc")
level_won_scene = ExtResource("10_wr4n6")

[node name="LevelLoadingScreen" parent="." instance=ExtResource("5_8qp3c")]
visible = false

[node name="ViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="ConfigurableSubViewport" type="SubViewport" parent="ViewportContainer"]
handle_input_locally = false
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(1280, 720)
render_target_update_mode = 4
script = ExtResource("6_bmy5n")

[node name="LevelUpReward" type="Control" parent="." groups=["LevelUpReward"]]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_bmy5n")

[node name="HBoxContainer" type="HBoxContainer" parent="LevelUpReward"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="UpgradeCard1" parent="LevelUpReward/HBoxContainer" instance=ExtResource("12_7aihr")]
layout_mode = 2

[node name="UpgradeCard2" parent="LevelUpReward/HBoxContainer" instance=ExtResource("12_7aihr")]
layout_mode = 2

[node name="UpgradeCard3" parent="LevelUpReward/HBoxContainer" instance=ExtResource("12_7aihr")]
layout_mode = 2
